Add form and js to take user guess and evaluate.

--- a/index.html
+++ b/index.html
@@ -11,15 +11,23 @@
     <div class='container'>
       <form id="sentence">
         <div class="form-group">
-          <label for="original-sentence">Please type a sentence.</label>
+          <label for="original-sentence">Please type a sentence:</label>
           <input type="text" id="original-sentence" class="form-control">
         </div>
         <button type="submit" class="btn">Submit</button>
       </form>
-      <div class="well results">
-        
+
+      <div class="results">
+
       </div>
 
+      <form id="sentence-guess">
+        <div class="form-group">
+          <label for="user-guess">Enter your guess here:</label>
+          <input type="text" id="user-guess" class="form-control">
+        </div>
+        <button type="submit" class="btn">Submit</button>
+      </form>
     </div>
   </body>
 </html>
